# Botcraft-AI

./: CMakeLists.txt
.github/workflows/: build-windows.yml
Examples/2_ChatCommandExample/: CMakeLists.txt
Examples/2_ChatCommandExample/src/: ChatCommandClient.cpp  getopt.h
botcraft/include/botcraft/AI/: OpenAIApi.hpp
botcraft/src/AI/: OpenAIApi.cpp
